# prmt

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.githooks/: pre-push
benches/: comprehensive_bench.rs  prompt_bench.rs
src/: executor.rs  main.rs  memo.rs  module_trait.rs  modules.rs  parser.rs  style.rs  template.rs
src/modules/: bun.rs  elixir.rs  git.rs  json.rs  path.rs
