[package]
name = "prmt"
version = "0.4.0"
edition = "2024"
authors = ["Ivan Zakharchanka <3axap4eHko@gmail.com>"]
description = "Ultra-fast, customizable shell prompt generator with zero-copy parsing"
license = "MIT"
repository = "https://github.com/3axap4eHko/prmt"
homepage = "https://github.com/3axap4eHko/prmt"
readme = "README.md"
keywords = ["prompt", "shell", "terminal", "cli", "performance"]
categories = ["command-line-utilities", "command-line-interface"]

[lib]
name = "prmt"
path = "src/lib.rs"

[[bin]]
name = "prmt"
path = "src/main.rs"

[[bench]]
name = "prompt_bench"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false

[dependencies]
lexopt = "0.3"
gix  = { version = "0.79.0", optional = true, default-features = false, features = ["parallel", "revision", "status"] }
rayon = "1"
dirs = "6"
memchr = "2"
is-terminal = "0.4"
once_cell = "1"
thiserror = "2"
unicode-width = "0.2"
bitflags = "2"
libc = "0.2"
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }

[features]
default = ["git-gix"]
git-gix = ["dep:gix"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
regex = "1"
serial_test = "3"
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
